fix(toolbar): splitbutton in overflow should display its items vertically

--- a/packages/default/scss/toolbar/_layout.scss
+++ b/packages/default/scss/toolbar/_layout.scss
@@ -153,6 +153,12 @@
             }
         }
 
+        // Split button
+        .k-split-button {
+            display: flex;
+            flex-direction: column;
+        }
+
         // Hidden items
         .k-overflow-hidden {
             display: none;
